--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,64 @@
     <link rel="stylesheet" href="./Styles.css">
 </head>
 <body>
-    
-    
+    <header>
+        <nav class="navigation">
+            <h2 class="header-logo">Header Logo</h2>
+            <ul>
+                <li>Header Link 1</li>
+                <li>Header Link 2</li>
+                <li>Header Link 3</li>
+            </ul>
+        </nav>
+
+        <div class="div">
+            <h1 class="page-header">This website is awsome</h1>
+            <p>This website has some some subtext that goes here under the main title. It is a smaller font and the color is a lower contrast</p>
+            <button class="sign-up-btn">Sign up</button>
+        </div>
+        <div class="img-placeholder">
+            <p>this is a placeholder for an image</p>
+        </div>
+    </header>
+
+    <main>
+        <section class="random-information">
+            <h2 class="section-heading">Some random information</h2>
+            <div class="image-card">
+                <div class="image-border"></div>
+                <p class="image-caption">this is some subtext under a illistration or image</p>
+            </div>
+            <div class="image-card">
+                <div class="image-border"></div>
+                <p class="image-caption">this is some subtext under a illistration or image</p>
+            </div>
+            <div class="image-card">
+                <div class="image-border"></div>
+                <p class="image-caption">this is some subtext under a illistration or image</p>
+            </div>
+            <div class="image-card">
+                <div class="image-border"></div>
+                <p class="image-caption">this is some subtext under a illistration or image</p>
+            </div>
+        </section>
+        <section class="quote">
+            <p class="quote-text">This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will 
+                actually read it. Who knows? All I know is it looks nice.
+            </p>
+            <p class="quote-author">-Thor, God of Thunder</p>
+        </section>
+        <section class="call-to-action">
+            <div>
+                <h3 class="call-to-action-heading">Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking that button over there</p>
+            </div>
+            <div>
+                <button class="sign-up-btn-2">Sign up</button>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p>Copyright The Odin Project 2021</p>
+    </footer>
 </body>
 </html>
