Started adding CSS to the landing page, so far the nav and heading sections have been started

--- a/Index.html
+++ b/Index.html
@@ -18,15 +18,17 @@
                 <li>Header Link 3</li>
             </ul>
         </nav>
-
-        <div class="div">
-            <h1 class="page-header">This website is awsome</h1>
-            <p>This website has some some subtext that goes here under the main title. It is a smaller font and the color is a lower contrast</p>
-            <button class="sign-up-btn">Sign up</button>
+        <div class="header-content">
+            <div class="left-side">
+                <h1 class="page-header">This website is awsome</h1>
+                <p>This website has some some subtext that goes here under the main title. It is a smaller font and the color is a lower contrast</p>
+                <button class="sign-up-btn">Sign up</button>
+            </div>
+            <div class="img-placeholder">
+                <p>this is a placeholder for an image</p>
+            </div>
         </div>
-        <div class="img-placeholder">
-            <p>this is a placeholder for an image</p>
-        </div>
+        
     </header>
 
     <main>
