--- a/Index.html
+++ b/Index.html
@@ -21,11 +21,11 @@
         <div class="header-content">
             <div class="left-side">
                 <h1 class="page-header">This website is awsome</h1>
-                <p>This website has some some subtext that goes here under the main title. It is a smaller font and the color is a lower contrast</p>
+                <p class="header-caption">This website has some some subtext that goes here under the main title. It is a smaller font and the color is a lower contrast</p>
                 <button class="sign-up-btn">Sign up</button>
             </div>
             <div class="img-placeholder">
-                <p>this is a placeholder for an image</p>
+                <p class="img-text">this is a placeholder for an image</p>
             </div>
         </div>
         
