Finished styling the random information section, still need to finish the quote, call to action, and footer for the landing page.

--- a/Index.html
+++ b/Index.html
@@ -34,21 +34,23 @@
     <main>
         <section class="random-information">
             <h2 class="section-heading">Some random information</h2>
-            <div class="image-card">
-                <div class="image-border"></div>
-                <p class="image-caption">this is some subtext under a illistration or image</p>
-            </div>
-            <div class="image-card">
-                <div class="image-border"></div>
-                <p class="image-caption">this is some subtext under a illistration or image</p>
-            </div>
-            <div class="image-card">
-                <div class="image-border"></div>
-                <p class="image-caption">this is some subtext under a illistration or image</p>
-            </div>
-            <div class="image-card">
-                <div class="image-border"></div>
-                <p class="image-caption">this is some subtext under a illistration or image</p>
+            <div class="random-info-cards">
+                <div class="image-card">
+                    <div class="image-border"></div>
+                    <p class="image-caption">this is some subtext under a illistration or image</p>
+                </div>
+                <div class="image-card">
+                    <div class="image-border"></div>
+                    <p class="image-caption">this is some subtext under a illistration or image</p>
+                </div>
+                <div class="image-card">
+                    <div class="image-border"></div>
+                    <p class="image-caption">this is some subtext under a illistration or image</p>
+                </div>
+                <div class="image-card">
+                    <div class="image-border"></div>
+                    <p class="image-caption">this is some subtext under a illistration or image</p>
+                </div>
             </div>
         </section>
         <section class="quote">
