Finished styling the quote section.

--- a/Index.html
+++ b/Index.html
@@ -13,9 +13,9 @@
         <nav class="navigation">
             <h2 class="header-logo">Header Logo</h2>
             <ul>
-                <li>Header Link 1</li>
-                <li>Header Link 2</li>
-                <li>Header Link 3</li>
+                <li><a href="#">Header Link 1</a></li>
+                <li><a href="#">Header Link 2</a></li>
+                <li><a href="#">Header Link 3</a></li>
             </ul>
         </nav>
         <div class="header-content">
