Finished the landing page project from The Odin Project

--- a/Index.html
+++ b/Index.html
@@ -60,17 +60,19 @@
             <p class="quote-author">-Thor, God of Thunder</p>
         </section>
         <section class="call-to-action">
-            <div>
-                <h3 class="call-to-action-heading">Call to action! It's time!</h3>
-                <p>Sign up for our product by clicking that button over there</p>
-            </div>
-            <div>
-                <button class="sign-up-btn-2">Sign up</button>
+            <div class="div section-content">
+                <div>
+                    <h3 class="call-to-action-heading">Call to action! It's time!</h3>
+                    <p>Sign up for our product by clicking that button over there</p>
+                </div>
+                <div>
+                    <button class="sign-up-btn-2">Sign up</button>
+                </div>
             </div>
         </section>
     </main>
     <footer>
-        <p>Copyright The Odin Project 2021</p>
+        <p>Copyright © The Odin Project 2021</p>
     </footer>
 </body>
 </html>
